@@ -82,6 +82,7 @@ changes are compared to KGySoft.Drawing v6.3.2. Breaking changes can be interpre
   + New ToKnownPixelFormat method
 + New QuantizerExtensions class to initialize a quantizing session asynchronously (.NET Framework 4.0 and above)
 + New DithererExtensions class to initialize a dithering session asynchronously (.NET Framework 4.0 and above)
++ Color32 struct: New implicit conversions to and from Color.
 
 NOTE: See the history of older versions at the following link:
 https://github.com/koszeggy/KGySoft.Drawing/blob/master/Specific/GdiPlus/KGySoft.Drawing/changelog.txt
